fix pom lombok